--- a/Stop Watch/app/src/main/res/anim/roundingalone.xml
+++ b/Stop Watch/app/src/main/res/anim/roundingalone.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:Interpolator="@android:interpolator/linear"
-    >
+    android:interpolator="@android:interpolator/linear">
 
     <rotate
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:fromDegrees="0"
         android:toDegrees="360"
         android:pivotX="50%"
