--- a/Stop Watch/app/src/main/res/layout/activity_stop_watch.xml
+++ b/Stop Watch/app/src/main/res/layout/activity_stop_watch.xml
@@ -76,7 +76,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="42dp"
         android:background="@drawable/btnyellow"
-        android:text="Pause"
+        android:text="Hold"
         android:textAllCaps="false"
         android:textColor="#FFF"
         android:textSize="20sp"
