--- a/To Do App/app/src/main/res/layout/activity_login.xml
+++ b/To Do App/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/welcome"
+    android:background="@drawable/icget"
     tools:context=".LoginActivity">
 
     <ScrollView
@@ -17,59 +17,60 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="500dp"
-            android:padding="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="500dp"
+                android:padding="20dp">
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:id="@+id/login_email"
-            android:background="@drawable/lavander_border"
-            android:layout_marginTop="30dp"
-            android:padding="8dp"
-            android:hint="Email"
-            android:drawableLeft="@drawable/baseline_email_24"
-            android:drawablePadding="8dp"/>
+                <EditText
+                    android:layout_width="350dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/login_email"
+                    android:background="@drawable/lavander_border"
+                    android:layout_marginTop="30dp"
+                    android:padding="8dp"
+                    android:hint="Email"
+                    android:drawableLeft="@drawable/baseline_email_24"
+                    android:drawablePadding="8dp"/>
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:id="@+id/login_password"
-            android:background="@drawable/lavander_border"
-            android:layout_marginTop="20dp"
-            android:padding="8dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:drawableLeft="@drawable/baseline_lock_24"
-            android:drawablePadding="8dp"/>
+                <EditText
+                    android:layout_width="350dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/login_password"
+                    android:background="@drawable/lavander_border"
+                    android:layout_marginTop="20dp"
+                    android:padding="8dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:drawableLeft="@drawable/baseline_lock_24"
+                    android:drawablePadding="8dp"/>
 
-        <Button
-            android:layout_width="350dp"
-            android:layout_height="70dp"
-            android:text="Login"
-            android:id="@+id/loginButton"
-            android:textSize="18sp"
-            android:layout_marginTop="30dp"
-            app:cornerRadius = "30dp"/>
+                <Button
+                    android:layout_width="350dp"
+                    android:layout_height="70dp"
+                    android:text="Login"
+                    android:id="@+id/loginButton"
+                    android:textSize="18sp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/lavander_border" />
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/signupRedirectText"
-            android:text="Not Yet Registered? SignUp"
-            android:layout_gravity="center"
-            android:padding="8dp"
-            android:textSize="18sp"
-            android:layout_marginTop="14dp"
-            android:textColor="@color/lavander"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/signupRedirectText"
+                    android:text="Not Yet Registered? SignUp"
+                    android:layout_gravity="center"
+                    android:padding="8dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="14dp"
+                    android:textColor="@color/lavander"/>
+
+            </LinearLayout>
 
         </LinearLayout>
-
-      </LinearLayout>
 
     </ScrollView>
 
