added the unit convertor

--- a/Unit Convertor Application/app/src/main/res/values/colors.xml
+++ b/Unit Convertor Application/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <resources>
+        <color name="splash_background">36EB1A1A</color>
+    </resources>
 </resources>
+
