--- a/Unit Convertor Application/app/src/main/res/values/themes.xml
+++ b/Unit Convertor Application/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <item name="Base.Theme.UnitConvertorApplication" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.UnitConvertorApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
